--- a/styles/style.css
+++ b/styles/style.css
@@ -8,7 +8,7 @@
 }
 body, html{
     min-height: 100vh;
-    min-width: 100vw;
+    min-width: 100%;
     background-color: hsl(0, 0%, 98%);
 }
 header{
@@ -120,4 +120,56 @@ div.filter-container > nav > a{
     display: flex;
     text-indent: 1.5rem;
     align-items: center;
+}
+section.countries-cards{
+    min-width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    padding: 1em;
+    gap: 1.5em;
+}
+div.card{
+    height: auto;
+    width: 13em;
+    background-color: hsl(0, 0%, 100%);
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.3);
+    cursor: pointer;
+}
+div.card:hover{
+    transform: translate(-5px, -5px);
+    transition: all 1s ease;
+}
+div.country-flag-img{
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    border-radius: 10px 10px 0px 0px;
+    height: 8em;
+    width: 100%; 
+}
+div.card-details{
+    width: 80%;
+    height: 8em;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    gap: 1em;
+}
+div.details > *, div.details > p *{
+    font-size: 0.9rem;
+}
+div.details > p {
+    font-weight: 600;
+}
+div.details > p > span{
+    font-weight: 300;
 }
