--- a/styles/style.css
+++ b/styles/style.css
@@ -131,6 +131,51 @@ section.countries-cards{
     padding: 1em;
     gap: 1.5em;
 }
+div.spin-container{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+div.spinner{
+    width: 70px;
+    height: 70px;
+    position: relative;
+}
+div.dot{
+    position: absolute;
+    inset: 0;
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+}
+div.dot::after{
+    content: '';
+    width: 8px;
+    height: 8px;
+    border-radius: 4px;
+    background-color: hsl(0, 0%, 52%);
+}
+div.dot{
+    animation: spin 1.8s infinite;
+}
+@keyframes spin {
+    to{transform: rotate(360deg);}
+}
+div.dot:nth-child(2){
+    animation-delay: 100ms;
+}
+div.dot:nth-child(3){
+    animation-delay: 200ms;
+}
+div.dot:nth-child(4){
+    animation-delay: 300ms;
+}
+div.dot:nth-child(5){
+    animation-delay: 400ms;
+}
 div.card{
     height: auto;
     width: 13em;
@@ -164,12 +209,77 @@ div.card-details{
     justify-content: center;
     gap: 1em;
 }
-div.details > *, div.details > p *{
+/* Jones Epalanga Pedro 2 subchefe /915 634 466 */
+/* div.card-details > p > strong{
+    text-overflow: clip;
+} */
+div.details > *, div.details > p *, div.apresentation-details > div > *, div.apresentation-details > div > p > *, div.others-details > *, div.others-details > p > *, div.b-countries > div{
     font-size: 0.9rem;
 }
-div.details > p {
+div.details > p, div.apresentation-details > div > p, div.others-details > p{
     font-weight: 600;
 }
-div.details > p > span{
+div.details > p > span, div.apresentation-details > div > p > span, div.others-details > p > span{
     font-weight: 300;
+}
+div.apresentation-flag-img{
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    min-height: 10em;
+    width: 85%; 
+}
+div.apresentation-details{
+    width: 85%;
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+}
+div.others-details{
+    width: 85%;
+}
+div.b-countries{
+    width: 85%;
+    height: auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 1em;
+}
+div.b-countries > div{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-width: 7em;
+    height: 2em;
+    background-color: hsl(0, 0%, 100%);
+    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.3);
+    border-radius: 2px;
+    text-align: center;
+}
+div.back-container{
+    width: 10.5em;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+div.back{
+    background-color: hsl(0, 0%, 100%);
+    border-radius: 2px;
+    height: 2.3em;
+    width: 8em;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 0.5em;
+    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.3);
+    cursor: pointer;
+}
+button#btnBack{
+    background-color: hsl(0, 0%, 100%);
+    border: none;
+    height: 2.3em;
+    max-width: 8em;
 }
