--- a/styles/style.css
+++ b/styles/style.css
@@ -125,7 +125,7 @@ div.filter-container > nav > a{
 }
 section.countries-cards{
     min-width: 100%;
-    height: auto;
+    min-height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
