--- a/styles/dark-mode.css
+++ b/styles/dark-mode.css
@@ -253,7 +253,7 @@ div.b-countries > div{
     justify-content: center;
     align-items: center;
     min-width: 10em;
-    height: 2em;
+    min-height: 2em;
     background-color: hsl(209, 23%, 22%);
     box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.3);
     border-radius: 2px;
