--- a/styles/style.css
+++ b/styles/style.css
@@ -204,17 +204,13 @@ div.country-flag-img{
 }
 div.card-details{
     width: 80%;
-    height: 8em;
+    min-height: 8em;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     justify-content: center;
     gap: 1em;
 }
-/* Jones Epalanga Pedro 2 subchefe /915 634 466 */
-/* div.card-details > p > strong{
-    text-overflow: clip;
-} */
 div.details > *, div.details > p *, div.apresentation-details > div > *, div.apresentation-details > div > p > *, div.others-details > *, div.others-details > p > *{
     font-size: 0.9rem;
 }
@@ -254,7 +250,7 @@ div.b-countries > div{
     justify-content: center;
     align-items: center;
     min-width: 10em;
-    height: 2em;
+    min-height: 2em;
     background-color: hsl(0, 0%, 100%);
     box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.3);
     border-radius: 2px;
